--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@
 * {
   font-family: 'Noto Sans KR', sans-serif;
   padding: 0;
-  margin: 0;
+  box-sizing: border-box;
+  /* border: 0; */
 }
 
 html {
+  width: 100%;
+  margin: 0;
   scroll-behavior: smooth;
   font-size:10px;
 }
@@ -36,6 +39,10 @@ a {
   navigation
   ==========================================
 */
+
+nav {
+  width: 100%;
+}
 
 .navigation-bar {
   position: sticky;
@@ -91,16 +98,13 @@ a {
 }
 
 .main-scroll-arrow {
-  /* display: none; */
-  /* width: 40px;
-  height: 40px; */
-  width: 20px;
-  height: 20px;
+  display: none;
+  width: 30px;
+  height: 30px;
   border-style: solid;
   border-color: #A9A9A9;
   border-width: 0 4px 4px 0;
   transform: rotate(45deg);
-  /* margin-top: 5%; */
   border-radius: 5%;
   /* animation: underarrow .7s ease-in-out infinite;
   -webkit-animation: underarrow .7s ease-in-out infinite; */
@@ -114,11 +118,12 @@ a {
 
 main {
   display: flex;
+  width: 100%;
 }
 
 #home {
   background-color: #000000;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1.3fr 1fr;
@@ -238,7 +243,7 @@ main {
   ". list2 profile ."
   ;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 ul {
@@ -248,27 +253,19 @@ ul {
 
 .intro1 {
   grid-area: intro1;
-  /* grid-column: 2 / span 1;
-  grid-row: 1 / span 1; */
 }
 
 .list1 {
   grid-area: list1;
-  /* grid-column: 2 / span 1;
-  grid-row: 2/ span 1; */
   opacity: 0;
 }
 
 .intro2 {
   grid-area: intro2;
-  /* grid-column: 2 / span 1;
-  grid-row: 3 / span 1; */
 }
 
 .list2 {
   grid-area: list2;
-  /* grid-column: 2 / span 1;
-  grid-row: 4/ span 1; */
   opacity: 0;
 }
 
@@ -281,8 +278,10 @@ ul {
 }
 
 .profile-image img {
-  height: 60rem;
-  width: 40rem;
+  /* height: 60rem;
+  width: 40rem; */
+  height: 63vh;
+  width: 30vw;
   border-radius: 10%;
 }
 
@@ -311,9 +310,10 @@ ul {
 #projects {
   display: grid;
   height: 100vh;
+  width: 100%;
   grid-template-columns: 1fr 10fr 1fr;
-  /* grid-template-rows: 1fr 3fr 1fr; */
-  grid-template-rows: 50px auto 60px;
+  grid-template-rows: 1fr 3fr 1fr;
+  /* grid-template-rows: 50px auto 60px; */
   grid-template-areas: 
     ". intro ."
     ". main ."
@@ -327,11 +327,11 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 3rem;
+  font-size: 4rem;
 }
 
 .project-intro {
-  padding-top: 50px;
+  /* padding-top: 50px; */
   grid-area: intro;
 }
 
@@ -358,16 +358,19 @@ ul {
     "thumbnail"
     "detail"
   ;
+  /* width: 400px;
+  height: 250px; */
   font-size: 5rem;
   font-weight: 900;
 }
 
 .thumbnail {
   grid-area: thumbnail;
-  /* width: 400px;
-  height: 250px; */
-  width: 33vw;
-  height: 35vh;
+  width: 400px;
+  height: 250px;
+  /* padding-top: 250px / 400px * 100%; */
+  /* width: 33vw;
+  height: 35vh; */
   border-radius: 10px;
   display: flex;
   justify-content: center;
